--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -28,6 +28,16 @@ jobs:
         with:
           python-version: ${{ env.PYTHON_VERSION }}
       
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            build-essential \
+            cmake \
+            libssl-dev \
+            libsasl2-dev \
+            pkg-config
+      
       - name: Build wheels
         uses: PyO3/maturin-action@v1
         with:
@@ -35,14 +45,6 @@ jobs:
           args: --release --out dist --find-interpreter
           sccache: 'true'
           manylinux: auto
-          before-script-linux: |
-            # Install minimal build dependencies for rdkafka
-            if command -v yum &> /dev/null; then
-              yum install -y perl-core zlib-devel
-            elif command -v apt-get &> /dev/null; then
-              apt-get update
-              apt-get install -y zlib1g-dev
-            fi
       
       - name: Upload wheels
         uses: actions/upload-artifact@v4
@@ -62,6 +64,9 @@ jobs:
         with:
           python-version: ${{ env.PYTHON_VERSION }}
           architecture: ${{ matrix.target }}
+      
+      - name: Install CMake
+        uses: lukka/get-cmake@latest
       
       - name: Build wheels
         uses: PyO3/maturin-action@v1
@@ -87,6 +92,10 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
+      
+      - name: Install build dependencies
+        run: |
+          brew install cmake pkg-config
       
       - name: Build wheels
         uses: PyO3/maturin-action@v1
