feat: add system dependencies for rdkafka wheel building
- Added CMake and required system libraries installation in release workflow for rdkafka compilation
- Enabled cmake-build feature for rdkafka dependency to ensure proper native build
- Added support for both yum (RedHat/CentOS) and apt (Debian/Ubuntu) package managers
- Installed openssl, sasl, and zlib development packages needed for rdkafka features

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -35,6 +35,15 @@ jobs:
           args: --release --out dist --find-interpreter
           sccache: 'true'
           manylinux: auto
+          before-script-linux: |
+            # Install CMake and build dependencies for rdkafka
+            if command -v yum &> /dev/null; then
+              yum install -y cmake3 perl-core openssl-devel cyrus-sasl-devel zlib-devel
+              ln -sf /usr/bin/cmake3 /usr/bin/cmake
+            elif command -v apt-get &> /dev/null; then
+              apt-get update
+              apt-get install -y cmake libssl-dev libsasl2-dev zlib1g-dev
+            fi
       
       - name: Upload wheels
         uses: actions/upload-artifact@v4
