--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,5 @@ crate-type = ["cdylib"]
 
 [dependencies]
 pyo3 = "0.21.0"
-rdkafka = "0.36"
+rdkafka = { version = "0.36", features = ["cmake-build"] }
 # futures = "0.3"
