feat: update to Python 3.13, PyO3 0.23, and fix multiple bugs
- Update PyO3 from 0.21 to 0.23 (Bound API, Python 3.13 support)
- Bump minimum Python to 3.13 with abi3-py313 stable ABI
- Fix produce() hardcoding "key" for all keyless messages
- Fix consumer using PyStopAsyncIteration instead of StopIteration
- Release GIL during blocking Kafka poll in consumer __next__
- Handle poisoned mutex gracefully instead of panicking
- Add optional config dict to producer and consumer constructors
- Use PyConnectionError for connection failures
- Fix README typos and update examples to match actual API
- Sync version to 0.2.0 across Cargo.toml and pyproject.toml
- Update CI workflow to Python 3.13
- Add CLAUDE.md

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,10 +4,10 @@ build-backend = "maturin"
 
 [project]
 name = "pyrkafka"
-version = "0.1.1"
-description = "Python bindings for rdfkafka Rust library"
+version = "0.2.0"
+description = "Python bindings for rdkafka Rust library"
 authors = [{ name = "Michael Rademaker", email = "michael@appbriek.com" }]
-requires-python = ">=3.8"
+requires-python = ">=3.13"
 readme = "README.md"
 license = {text = "MIT License"}
 classifiers = [
@@ -24,4 +24,4 @@ Changelog = "https://github.com/Miggets7/pyrkafka"
 
 
 [tool.maturin]
-features = ["pyo3/extension-module", "pyo3/abi3-py38"]
+features = ["pyo3/extension-module", "pyo3/abi3-py313"]
