--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -8,9 +8,9 @@ on:
       - "[0-9]+.[0-9]+.[0-9]+b[0-9]+"
       - "[0-9]+.[0-9]+.[0-9]+rc[0-9]+"
 
-env:
-  PACKAGE_NAME: "pyrkafka"
-  PYTHON_VERSION: "3.13"
+concurrency:
+  group: release
+  cancel-in-progress: false
 
 permissions:
   contents: read
@@ -23,29 +23,18 @@ jobs:
         target: [x86_64, aarch64]
     steps:
       - uses: actions/checkout@v4
-      
-      - uses: actions/setup-python@v5
-        with:
-          python-version: ${{ env.PYTHON_VERSION }}
-      
-      - name: Install system dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y \
-            build-essential \
-            cmake \
-            libssl-dev \
-            libsasl2-dev \
-            pkg-config
-      
+
       - name: Build wheels
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.target }}
-          args: --release --out dist --find-interpreter
+          args: --release --out dist
           sccache: 'true'
           manylinux: auto
-      
+          # Install cmake + perl inside the manylinux container (not on the host).
+          # cmake is needed by rdkafka-sys, perl by openssl-sys vendored build.
+          before-script-linux: yum install -y cmake perl
+
       - name: Upload wheels
         uses: actions/upload-artifact@v4
         with:
@@ -54,31 +43,24 @@ jobs:
 
   windows:
     runs-on: windows-latest
-    strategy:
-      matrix:
-        target: [x64]
     steps:
       - uses: actions/checkout@v4
-      
+
       - uses: actions/setup-python@v5
         with:
-          python-version: ${{ env.PYTHON_VERSION }}
-          architecture: ${{ matrix.target }}
-      
-      - name: Install CMake
-        uses: lukka/get-cmake@latest
-      
+          python-version: "3.13"
+
       - name: Build wheels
         uses: PyO3/maturin-action@v1
         with:
-          target: ${{ matrix.target }}
-          args: --release --out dist --find-interpreter
+          target: x86_64
+          args: --release --out dist
           sccache: 'true'
-      
+
       - name: Upload wheels
         uses: actions/upload-artifact@v4
         with:
-          name: wheels-windows-${{ matrix.target }}
+          name: wheels-windows-x86_64
           path: dist
 
   macos:
@@ -88,22 +70,18 @@ jobs:
         target: [x86_64, aarch64]
     steps:
       - uses: actions/checkout@v4
-      
+
       - uses: actions/setup-python@v5
         with:
-          python-version: ${{ env.PYTHON_VERSION }}
-      
-      - name: Install build dependencies
-        run: |
-          brew install cmake pkg-config
-      
+          python-version: "3.13"
+
       - name: Build wheels
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.target }}
-          args: --release --out dist --find-interpreter
+          args: --release --out dist
           sccache: 'true'
-      
+
       - name: Upload wheels
         uses: actions/upload-artifact@v4
         with:
@@ -114,13 +92,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      
+
       - name: Build sdist
         uses: PyO3/maturin-action@v1
         with:
           command: sdist
           args: --out dist
-      
+
       - name: Upload sdist
         uses: actions/upload-artifact@v4
         with:
@@ -131,6 +109,10 @@ jobs:
     name: Release
     runs-on: ubuntu-latest
     needs: [linux, windows, macos, sdist]
+    # PyPI trusted publishing requires a GitHub environment.
+    # Create one named "release" at: github.com/<owner>/<repo>/settings/environments
+    # Then add it as a trusted publisher in your PyPI project settings.
+    environment: release
     permissions:
       id-token: write
       contents: write
@@ -140,18 +122,17 @@ jobs:
           pattern: wheels-*
           path: dist
           merge-multiple: true
-      
+
       - name: Publish to PyPI
-        uses: PyO3/maturin-action@v1
+        uses: pypa/gh-action-pypi-publish@release/v1
         with:
-          command: upload
-          args: --non-interactive --skip-existing dist/*
-      
+          packages-dir: dist/
+
       - name: Create GitHub Release
         env:
           GH_TOKEN: ${{ github.token }}
         run: |
-          gh release create ${{ github.ref_name }} dist/* \
-            --repo ${{ github.repository }} \
-            --title ${{ github.ref_name }} \
+          gh release create "${{ github.ref_name }}" dist/* \
+            --repo "${{ github.repository }}" \
+            --title "${{ github.ref_name }}" \
             --generate-notes
