fix: remove gssapi-vendored and fix manylinux package manager
- Remove gssapi-vendored from rdkafka features: krb5-src cannot build
  on Windows (nmake not found) or cross-compile on macOS (aarch64 to
  x86_64). This feature has never built successfully in CI.
- Fix before-script-linux to fall back from yum to dnf to pip, since
  aarch64 manylinux_2_28 containers don't have yum.

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -31,9 +31,9 @@ jobs:
           args: --release --out dist
           sccache: 'true'
           manylinux: auto
-          # Install cmake + perl inside the manylinux container (not on the host).
-          # cmake is needed by rdkafka-sys, perl by openssl-sys vendored build.
-          before-script-linux: yum install -y cmake perl
+          # Install cmake inside the manylinux container (not on the host).
+          # Tries yum (manylinux2014/CentOS), dnf (manylinux_2_28/AlmaLinux), then pip as fallback.
+          before-script-linux: yum install -y cmake || dnf install -y cmake || pip install cmake
 
       - name: Upload wheels
         uses: actions/upload-artifact@v4
