--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -31,8 +31,11 @@ jobs:
           args: --release --out dist
           sccache: 'true'
           manylinux: 2_28
-          # Install build dependencies inside the manylinux_2_28 (AlmaLinux 8) container.
-          before-script-linux: dnf install -y cmake perl-IPC-Cmd clang-devel
+          # Install build dependencies inside the container.
+          # x86_64 uses manylinux_2_28 (AlmaLinux/dnf), aarch64 cross uses Ubuntu (apt-get).
+          before-script-linux: >-
+            dnf install -y cmake perl-IPC-Cmd clang-devel ||
+            (apt-get update && apt-get install -y cmake libclang-dev)
 
       - name: Upload wheels
         uses: actions/upload-artifact@v4
