fix: install libcurl-dev for rdkafka build in manylinux
librdkafka 2.12.1 includes curl/curl.h in rdkafka_conf.c, requiring
curl development headers even when built with -DWITH_CURL=0.

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -36,9 +36,9 @@ jobs:
           # aarch64 cross-compiles in rust-cross/manylinux_2_28-cross (Ubuntu / apt-get).
           before-script-linux: |
             if command -v yum &> /dev/null; then
-                yum install -y perl-core cmake clang-devel
+                yum install -y perl-core cmake clang-devel libcurl-devel
             else
-                apt-get update && apt-get install -y perl cmake libclang-dev
+                apt-get update && apt-get install -y perl cmake libclang-dev libcurl4-openssl-dev
             fi
 
       - name: Upload wheels
